--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -13,3 +13,10 @@
   website: https://ghost.org/
   location: On a plane
   profile_image: img/alex-knight-326705-unsplash.jpg
+- id: thxwelchs
+  avatar: avatars/thxwelchs.png
+  bio: thxwelchs
+  twitter: TryGhost
+  facebook: ghost
+  website: https://ghost.org/
+  location: Seoul, South Korea
