--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "cssnano": "4.1.10",
     "emotion": "10.0.14",
     "emotion-server": "10.0.14",
-    "gatsby": "2.13.33",
+    "gatsby": "2.13.71",
     "gatsby-image": "2.2.6",
     "gatsby-plugin-canonical-urls": "2.1.2",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-emotion": "4.1.2",
     "gatsby-plugin-feed": "2.3.5",
     "gatsby-plugin-google-analytics": "2.1.4",
@@ -45,6 +46,7 @@
     "gatsby-transformer-remark": "2.6.9",
     "gatsby-transformer-sharp": "2.2.4",
     "gatsby-transformer-yaml": "2.2.3",
+    "global": "^4.4.0",
     "lodash": "4.17.15",
     "modern-normalize": "0.5.0",
     "normalize.css": "8.0.1",
