--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^1.0.0-rc.3-2",
     "@emotion/core": "10.0.14",
     "@emotion/styled": "10.0.14",
     "@emotion/styled-base": "10.0.14",
@@ -37,6 +38,7 @@
     "gatsby-plugin-typescript": "2.1.2",
     "gatsby-remark-abbr": "1.0.0",
     "gatsby-remark-copy-linked-files": "2.1.3",
+    "gatsby-remark-highlight-code": "^1.1.0",
     "gatsby-remark-images": "3.1.7",
     "gatsby-remark-prismjs": "3.3.3",
     "gatsby-remark-responsive-iframe": "2.2.4",
