--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@babel/plugin-transform-spread": "^7.12.1",
     "@deckdeckgo/highlight-code": "^1.0.0-rc.3-2",
     "@emotion/core": "10.0.14",
     "@emotion/styled": "10.0.14",
@@ -24,16 +25,17 @@
     "cssnano": "4.1.10",
     "emotion": "10.0.14",
     "emotion-server": "10.0.14",
-    "gatsby": "2.13.33",
+    "gatsby": "^2.32.13",
     "gatsby-image": "2.2.6",
     "gatsby-plugin-canonical-urls": "2.1.2",
     "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-emotion": "4.1.2",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-feed": "2.3.5",
     "gatsby-plugin-google-analytics": "2.1.4",
     "gatsby-plugin-postcss": "2.1.2",
     "gatsby-plugin-react-helmet": "3.1.2",
-    "gatsby-plugin-sharp": "2.2.9",
+    "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-sitemap": "2.2.3",
     "gatsby-plugin-typescript": "2.1.2",
     "gatsby-remark-abbr": "1.0.0",
@@ -46,7 +48,7 @@
     "gatsby-source-filesystem": "2.1.6",
     "gatsby-transformer-json": "2.2.2",
     "gatsby-transformer-remark": "2.6.9",
-    "gatsby-transformer-sharp": "2.2.4",
+    "gatsby-transformer-sharp": "^2.4.3",
     "gatsby-transformer-yaml": "2.2.3",
     "lodash": "4.17.15",
     "modern-normalize": "0.5.0",
@@ -59,7 +61,8 @@
     "react-dom": "16.8.6",
     "react-emotion": "10.0.0",
     "react-helmet": "5.2.1",
-    "rehype-react": "4.0.1"
+    "rehype-react": "4.0.1",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "@types/classnames": "2.2.9",
