--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-google-analytics": "2.1.4",
     "gatsby-plugin-postcss": "2.1.2",
     "gatsby-plugin-react-helmet": "3.1.2",
+    "gatsby-plugin-robots-txt": "^1.6.9",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-sitemap": "2.2.3",
     "gatsby-plugin-typescript": "2.1.2",
